auth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /signin
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /login
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /logout
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /register
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /auth
      - backend:
          serviceName: auth
          servicePort: 9000
        path: /users/[0-9]
